--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
    
 <body>
 
+    <div class="topnav">
+        <a class="active" href="https://davidrfnienhuis.github.io/">Home</a>
+        <a href="https://davidrfnienhuis.github.io/projects/">Projects</a>        
+      </div>
 
 
 <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;" style="font-size: medium;">Projects Page</h1>
