--- a/index.html
+++ b/index.html
@@ -12,24 +12,37 @@
 
 
 <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;" style="font-size: medium;">Projects Page</h1>
-<p style="font-family: 'Trebuchet MS';" style="font-size: large;">Welcome to Daves Project Page</p>
 
    
 </body>
 
-<div class="list">
-    <h3>Assignments</h3>
-    <ol>
-        <li>Bus route</li>
-        <a href="https://davidrfnienhuis.github.io/Maps/">Map</a> 
-        
-        <li>Eye Movement</li>
-        <a href="https://davidrfnienhuis.github.io/Eyes/">Eyes</a>
+<div class="grid">
 
-        <li>Pacman</li>
-        <a href="https://davidrfnienhuis.github.io/PacMan/">PacMan</a>
-      </ol>
-</div>
+  <header style="font-family: 'Trebuchet MS';" style="font-size: large;">Welcome to Daves Project Page!
+  </header>
+
+  <asaide>
+    <div class="list">
+      <h3>Assignments</h3>
+      <ol>
+          <li>Bus route</li>
+          <a href="https://davidrfnienhuis.github.io/Maps/">Map</a> 
+          
+          <li>Eye Movement</li>
+          <a href="https://davidrfnienhuis.github.io/Eyes/">Eyes</a>
+  
+          <li>Pacman</li>
+          <a href="https://davidrfnienhuis.github.io/PacMan/">PacMan</a>
+        </ol>
+    </div>
+  </asaide>
+  
+  <article>
+  </article>
+  <footer></footer>
+  
+
+
 
 
 </html>
