--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     <div class="list">
       <h3>Assignments</h3>
       <ol>
-          <li>Bus route</li>
-          <a href="https://davidrfnienhuis.github.io/Maps/">Map</a> 
+          <li>Bus Tracker</li>
+          <a href="https://davidrfnienhuis.github.io/Maps/">Bus Tracker</a> 
+          <a href="https://davidrfnienhuis.github.io/Maps/readme.md">Readme</a>
+
           
           <li>Eye Movement</li>
           <a href="https://davidrfnienhuis.github.io/Eyes/">Eyes</a>
