--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     </div>
   </asaide>
   
-  <article>
-  </article>
+  <article> <img src="./bioPic6.jpg" ></article>
   <footer></footer>
   
 
