--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </asaide>
   
-  <article> <img src="./bioPic6.jpg" class="mainpic" ></article>
+  <article> <img src="./bioPic6.jpg" class="mainpic" class="center" ></article>
   <footer></footer>
   
 
