--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <div class="list">
       <h3>Assignments</h3>
       <ol>
-          <li>Bus Tracker</li>
+          <li>Click this link to see the Realtime Bus Tracking Assignment</li>
           <a href="https://davidrfnienhuis.github.io/Maps/">Bus Tracker</a> 
                     
-          <li>Eye Movement</li>
+          <li>Here is the link to the Eye Movement Repository</li>
           <a href="https://davidrfnienhuis.github.io/Eyes/">Eyes</a>
   
-          <li>Pacman</li>
+          <li>Click the Link below to view the Pacman Assignment</li>
           <a href="https://davidrfnienhuis.github.io/PacMan/">PacMan</a>
         </ol>
     </div>
