--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a href="https://davidrfnienhuis.github.io/Eyes/">Eyes</a>
   
           <li>Click the Link below to view the Pacman Assignment</li>
-          <a href="https://davidrfnienhuis.github.io/PacMan/">PacMan</a>
+          <a style="color: black;" href="https://davidrfnienhuis.github.io/PacMan/">PacMan</a>
         </ol>
     </div>
   </asaide>
