--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <h3>Assignments</h3>
       <ol>
           <li>Click this link to see the Realtime Bus Tracking Assignment</li>
-          <a href="https://davidrfnienhuis.github.io/Maps/">Bus Tracker</a> 
+          <a style="color: black;" href="https://davidrfnienhuis.github.io/Maps/">Bus Tracker</a> 
                     
           <li>Here is the link to the Eye Movement Repository</li>
-          <a href="https://davidrfnienhuis.github.io/Eyes/">Eyes</a>
+          <a  style="color: black;" href="https://davidrfnienhuis.github.io/Eyes/">Eyes</a>
   
           <li>Click the Link below to view the Pacman Assignment</li>
           <a style="color: black;" href="https://davidrfnienhuis.github.io/PacMan/">PacMan</a>
