--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header style="font-family: 'Trebuchet MS';" style="font-size: large;">Welcome to Daves Project Page!
   </header>
 
-  <asaide>
+  <asaide class="two">
     <div class="list">
       <h3>Assignments</h3>
       <ol>
@@ -38,7 +38,7 @@
   </asaide>
   
   <article> <img src="./bioPic6.jpg" class="mainpic" ></article>
-  <footer></footer>
+  <footer class="two"></footer>
   
 
 
