--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
         <a href="https://davidrfnienhuis.github.io/projects/">Projects</a>        
       </div>
 
-
-<h1 style="font-family: Georgia, 'Times New Roman', Times, serif;" style="font-size: medium;">Projects Page</h1>
-
    
 </body>
 
@@ -26,13 +23,13 @@
       <h3>Assignments</h3>
       <ol>
           <li>Click this link to see the Realtime Bus Tracking Assignment</li>
-          <a style="color: black;" href="https://davidrfnienhuis.github.io/Maps/">Bus Tracker</a> 
+          <a style="color: rgb(145, 66, 209);" href="https://davidrfnienhuis.github.io/Maps/">Bus Tracker</a> 
                     
           <li>Here is the link to the Eye Movement Repository</li>
-          <a  style="color: black;" href="https://davidrfnienhuis.github.io/Eyes/">Eyes</a>
+          <a  style="color: rgb(145, 66, 209);" href="https://davidrfnienhuis.github.io/Eyes/">Eyes</a>
   
           <li>Click the Link below to view the Pacman Assignment</li>
-          <a style="color: black;" href="https://davidrfnienhuis.github.io/PacMan/">PacMan</a>
+          <a style="color: rgb(145, 66, 209);" href="https://davidrfnienhuis.github.io/PacMan/">PacMan</a>
         </ol>
     </div>
   </asaide>
