--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </asaide>
   
   <article> <img src="./bioPic6.jpg" class="mainpic" ></article>
-  <footer class="two"></footer>
+  <footer class="two">hello</footer>
   
 
 
