--- a/index.html
+++ b/index.html
@@ -23,19 +23,21 @@
       <h3>Assignments</h3>
       <ol>
           <li>Click this link to see the Realtime Bus Tracking Assignment</li>
-          <a style="color: rgb(145, 66, 209);" href="https://davidrfnienhuis.github.io/Maps/">Bus Tracker</a> 
+          <a  href="https://davidrfnienhuis.github.io/Maps/">Bus Tracker</a> 
+          <p>and</p>
+          <a href="https://github.com/DavidRFNienhuis/Maps">Bus Tracker Repository</a>
                     
           <li>Here is the link to the Eye Movement Repository</li>
-          <a  style="color: rgb(145, 66, 209);" href="https://davidrfnienhuis.github.io/Eyes/">Eyes</a>
+          <a href="https://davidrfnienhuis.github.io/Eyes/">Eyes</a>
   
           <li>Click the Link below to view the Pacman Assignment</li>
-          <a style="color: rgb(145, 66, 209);" href="https://davidrfnienhuis.github.io/PacMan/">PacMan</a>
+          <a href="https://davidrfnienhuis.github.io/PacMan/">PacMan</a>
         </ol>
     </div>
   </asaide>
   
   <article> <img src="./bioPic6.jpg" class="mainpic" ></article>
-  <footer class="two">hello</footer>
+  <footer class="two">  </footer>
   
 
 
