--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
                     
           <li>Here is the link to the Eye Movement Repository</li>
           <a href="https://davidrfnienhuis.github.io/Eyes/">Eyes</a>
+          <p>and</p>
+          <a href="https://github.com/DavidRFNienhuis/Eyes">Eye Repository</a>
+
   
           <li>Click the Link below to view the Pacman Assignment</li>
           <a href="https://davidrfnienhuis.github.io/PacMan/">PacMan</a>
+          <p>and</p>
+          <a href="https://github.com/DavidRFNienhuis/PacMan">Pacman Repository</a>
         </ol>
     </div>
   </asaide>
