--- a/index.html
+++ b/index.html
@@ -22,27 +22,23 @@
     <div class="list">
       <h3>Assignments</h3>
       <ol>
-          <li>Click this link to see the Realtime Bus Tracking Assignment</li>
+          <li>Click this link to see the Realtime Bus Tracking Assignments</li>
           <a  href="https://davidrfnienhuis.github.io/Maps/">Bus Tracker</a> 
-          <p>and</p>
           <a href="https://github.com/DavidRFNienhuis/Maps">Bus Tracker Repository</a>
-                    
-          <li>Here is the link to the Eye Movement Repository</li>
+             <br>       
+          <li>Here is the link to the Eye Movement Assignments</li>
           <a href="https://davidrfnienhuis.github.io/Eyes/">Eyes</a>
-          <p>and</p>
           <a href="https://github.com/DavidRFNienhuis/Eyes">Eye Repository</a>
-
-  
-          <li>Click the Link below to view the Pacman Assignment</li>
+              <br>  
+          <li>Click the Link below to view the Pacman Assignments</li>
           <a href="https://davidrfnienhuis.github.io/PacMan/">PacMan</a>
-          <p>and</p>
           <a href="https://github.com/DavidRFNienhuis/PacMan">Pacman Repository</a>
         </ol>
     </div>
   </asaide>
   
   <article> <img src="./bioPic6.jpg" class="mainpic" ></article>
-  <footer class="two">  </footer>
+  <footer class="two"></footer>
   
 
 
