--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     <div class="list">
       <h3>Assignments</h3>
       <ol>
-          <li>Click this link to see the Realtime Bus Tracking Assignments</li>
+          <li>Click these link to see the Realtime Bus Tracking Assignments</li>
           <a  href="https://davidrfnienhuis.github.io/Maps/">Bus Tracker</a> 
           <br>
           <a href="https://github.com/DavidRFNienhuis/Maps">Bus Tracker Repository</a>
                    
-          <li>Here is the link to the Eye Movement Assignments</li>
+          <li>Here are the links to the Eye Movement Assignments</li>
           <a href="https://davidrfnienhuis.github.io/Eyes/">Eyes</a>
           <br> 
           <a href="https://github.com/DavidRFNienhuis/Eyes">Eye Repository</a>
              
-          <li>Click the Link below to view the Pacman Assignments</li>
+          <li>Click these Link below to view the Pacman Assignments</li>
           <a href="https://davidrfnienhuis.github.io/PacMan/">PacMan</a>
           <br>
           <a href="https://github.com/DavidRFNienhuis/PacMan">Pacman Repository</a>
