--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </asaide>
   
   <article> <img src="./bioPic6.jpg" class="mainpic" ></article>
-  <footer class="two"></footer>
+  <footer></footer>
   
 
 
